--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: Rails CI/CD
 on:
   push:
     branches:
-      - main
-
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,9 +13,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v2
+      uses: actions/setup-ruby@v1
       with:
-        ruby-version: '3.x' # Adjust as needed
+        ruby-version: '3.1' # Adjust as needed
 
     - name: Install dependencies
       run: |
