--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,32 @@
-name: Rails CI/CD
+name: Your Workflow Name
 
 on:
   push:
     branches:
       - master
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.1' # Adjust as needed
+        ruby-version: 3.0
 
     - name: Install dependencies
       run: |
         gem install bundler
         bundle install
+
+    - name: Setup database
+      run: |
+        bin/rails db:create RAILS_ENV=test
+        bin/rails db:migrate RAILS_ENV=test
 
     - name: Run tests
       run: bundle exec rails test
