--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Setup database
       run: |
-        bin/rails db:create RAILS_ENV=test
-        bin/rails db:migrate RAILS_ENV=test
+        rails db:create RAILS_ENV=test
+        rails db:migrate RAILS_ENV=test
 
     - name: Run tests
       run: bundle exec rails test
