--- a/test/fixtures/collegemodules.yml
+++ b/test/fixtures/collegemodules.yml
@@ -4,8 +4,5 @@ one:
   module_name: MyString
   module_id: MyString
   module_lecturer: MyString
+  user_id: 1
 
-two:
-  module_name: MyString
-  module_id: MyString
-  module_lecturer: MyString
